--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="amphtml" href="https://bt05.short.gy/rcjiem">
     <meta name="google-site-verification" content="MVmkp5DownMYyOai4G1raHjdJNX1-9uVUlzVJ7xXNc8" />
     <meta name="theme-color" content="">
-    <link rel="canonical" href="http://ftp.hemivstotal.com//"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
+    <link rel="canonical" href="http://ftp.hemivstotal.com/"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       MASTERSLOT88 : Link Alternatif Slot Online Rtp MasterSlot88 New Member Teratas
  &ndash; My Store</title>
 
@@ -18,7 +18,7 @@
     
 
 <meta property="og:site_name" content="My Store">
-<meta property="og:url" content="http://ftp.hemivstotal.com//">
+<meta property="og:url" content="http://ftp.hemivstotal.com/">
 <meta property="og:title" content="MASTERSLOT88 : Link Alternatif Slot Online Rtp MasterSlot88 New Member Teratas">
 <meta property="og:type" content="product">
 <meta property="og:description" content="MASTERSLOT88 : Link Alternatif Slot Online Rtp MasterSlot88 New Member Teratas     Masterslot88 Kali ini telah datang untuk memberikan sebuah layanan tentang slot gacor hari ini yang banyak manfaat untuk member semuanya, Telah di karenakan memberikan nominal deposit yang paling murah dan terpopuler di dunia,"><meta property="og:image" content="http://desolaceapparel.com/cdn/shop/files/9a15ac390cfe970f1cc29efcbb48d6af_291ba73d-f9ca-4f5d-98e1-ce934f41397b.jpg?v=1708841991">
@@ -33,7 +33,7 @@
     <script src="//desolaceapparel.com/cdn/shop/t/2/assets/constants.js?v=58251544750838685771708837914" defer="defer"></script>
     <script src="//desolaceapparel.com/cdn/shop/t/2/assets/pubsub.js?v=158357773527763999511708837914" defer="defer"></script>
     <script src="//desolaceapparel.com/cdn/shop/t/2/assets/global.js?v=106116626045777747121708837914" defer="defer"></script><script src="//desolaceapparel.com/cdn/shop/t/2/assets/animations.js?v=88693664871331136111708837914" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/63367119015/digital_wallets/dialog">
-<link rel="alternate" type="application/json+oembed" href="http://ftp.hemivstotal.com//.oembed">
+<link rel="alternate" type="application/json+oembed" href="http://ftp.hemivstotal.com/.oembed">
 <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=bfdabe-54.myshopify.com&locale=en-KH"></script>
 <script async="async" src="https://shop.app/checkouts/internal/preloads.js?permanent-domain=bfdabe-54.myshopify.com&locale=en-KH" crossorigin="anonymous"></script>
 <script id="shopify-features" type="application/json">{"accessToken":"706f78a945cc5f41384655d3a6363992","betas":["rich-media-storefront-analytics"],"domain":"desolaceapparel.com","predictiveSearch":true,"shopId":63367119015,"smart_payment_buttons_url":"https:\/\/desolaceapparel.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.en.js","dynamic_checkout_cart_url":"https:\/\/desolaceapparel.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.en.js","dynamic_checkout_cart_button_sizes":{"maxWidth":500,"minWidth":140},"locale":"en","flg4ff40b22":false}</script>
@@ -1804,7 +1804,7 @@ Item added to your cart
           type="text"
           class="field__input"
           id="ShareUrl-template--16540074541223__main"
-          value="http://ftp.hemivstotal.com//"
+          value="http://ftp.hemivstotal.com/"
           placeholder="Link"
           onclick="this.select();"
           readonly
